--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.navbar-default{
+/*.navbar-default{
 	background-color: #fff;
 	color: #fff;
 }
@@ -7,4 +7,43 @@
 	background-color: #336666;
 	color: #fff;
 	padding: 30px;
+}*/
+
+
+.social-icon{
+  padding-left: 5px;
+  padding-right: 5px;
+  }
+
+.footer {
+    height: 60px;
+    background-color: #666666;
+    border-top: 4px solid #4aaaa5;
+    color: white;
+    padding-top: 10px;
 }
+h1{
+  background: #4aaaa5;
+  color: #fff;
+  padding: 30px;
+  margin: 0;
+
+}
+
+h2, h3{
+  color: #4aaaa5;
+  font-weight: bold;
+}
+
+body{
+ background: url("../img/intersection.png");
+}
+
+#profile{
+  float: left;
+  width: 300px;
+  padding: 0px 10px 10px 0px;
+}
+
+
+
